# parquette-lighting

./: .gitignore  CLAUDE.md  ClubFitness.pde  FFTGenerator.java  Generator.java  ImpulseGenerator.java  NoiseGenerator.java  OSC.md  README.md  TODOs.md  WaveGenerator.java
esp/: platformio.ini
esp/address_changer/: platformio.ini
esp/controller_base/: platformio.ini  (+1 more)
launchd/: ca.parquette.lighting.openstagecontrol.plist  ca.parquette.lighting.server.plist  install.sh  uninstall.sh
open-stage-control/: build-config.sh  default-state.state  layout-config.json  notes.md  patchbay-snippet.js  server-template.config  server.config
python/bellechasse/: .pre-commit-config.yaml  pyproject.toml
python/bellechasse/src/bellechasse/: server.py
python/bellechasse/src/bellechasse/generators/: __init__.py  fft_generator.py  generator.py  impulse_generator.py  noise_generator.py  wave_generator.py
python/bellechasse/src/bellechasse/util/: math.py
python/bellechasse/tests/: test_generators.py  test_util_math.py
python/parquette-lights/: TODOs.md  launch.sh  params.pickle  pylintrc  pyproject.toml  session.pickle
python/parquette-lights/scripts/: bench_timing.py  deploy.py  strip_layout_defaults.py
python/parquette-lights/src/bellechasse/generators/: __init__.py  fft_generator.py  generator.py
python/parquette-lights/src/parquette/lights/: category.py  coord_system_state.py  dmx.py  osc.py  preset_manager.py  scene.py  server.py
python/parquette-lights/src/parquette/lights/audio_analysis/: __init__.py  audio.py  fft.py
python/parquette-lights/src/parquette/lights/fixtures/: __init__.py  basics.py  hazers.py  spotlights.py  washes.py
python/parquette-lights/src/parquette/lights/generators/: __init__.py  bpm_generator.py  chanmap.py  fft_generator.py  generator.py  impulse_generator.py  loop_generator.py  mixer.py  noise_generator.py  wave_generator.py
python/parquette-lights/src/parquette/lights/params/: __init__.py  audio.py  booth.py  channel_levels.py  deps.py  hazer.py  non_saved.py  plants.py  reds.py  spots.py  strobes.py  washes.py
python/parquette-lights/src/parquette/lights/patching/: __init__.py  audio.py  booth.py  builder.py  chandelier.py  channel_levels.py  fixtures.py  hazer.py  non_saved.py  plants.py  reds.py  spots.py  strobes.py  washes.py
python/parquette-lights/src/parquette/lights/util/: aiming.py  client_tracker.py  coord_system.py  coordinates.py  math.py  session_store.py
python/parquette-lights/tests/: conftest.py  test_aiming.py  test_coord_system.py  test_generators.py  test_loop_generator.py  test_util_coordinates.py  test_util_math.py
python/parquette-lights/tests/ui/: test_layout_structure.py  test_osc_addresses.py  test_preset_workflow.py
scripts/: copy-worktree-changes.sh
(+10 files in other folders)
