[project]
name = "bellechasse"
version = "0.1.0"
description = ""
authors = [
    {name = "Severin Smith",email = "severin@smallbutdigital.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-osc (>=1.9.3,<2.0.0)",
    "dmxenttecpro (>=0.4,<0.5)",
]

[tool.poetry]
packages = [{include = "bellechasse", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
server = 'bellechasse.server:run'
