[project]
name = "bellechasse"
version = "0.1.0"
description = ""
authors = [
    {name = "Severin Smith",email = "severin@smallbutdigital.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-osc (>=1.9.3,<2.0.0)",
    "dmxenttecpro (>=0.4,<0.5)",
    "pyserial (>=3.5,<4.0)",
    "types-pyserial (>=3.5.0.20250326,<4.0.0.0)",
    "click (>=8.1.8,<9.0.0)",
]

[tool.poetry]
packages = [{include = "bellechasse", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pylint = "^3.3.6"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
poethepoet = "^0.34.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
server = 'bellechasse.server:run'

[tool.poe.tasks]
pylint = "pylint --rcfile=./pylintrc -f colorized ./src/"
black = "black ./"
pytest = "pytest"
lintntest = ["black", "pylint", "pytest"]