[project]
name = "parquette"
version = "0.1.0"
description = ""
authors = [
    {name = "Severin Smith",email = "severin@smallbutdigital.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-osc (>=1.9.3,<2.0.0)",
    "dmxenttecpro (>=0.4,<0.5)",
    "pyserial (>=3.5,<4.0)",
    "click (>=8.1.8,<9.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
]

[tool.poetry]
packages = [{include = "parquette", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pylint = "^3.3.6"
mypy = "^1.15.0"
poethepoet = "^0.34.0"
types-pyserial = "^3.5.0.20250326"
types-pyaudio = "^0.2.16.20240516"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
server = 'parquette.lights.server:run'

[tool.poe.tasks]
pylint = "pylint --rcfile=./pylintrc -f colorized ./src/"
mypy = "mypy ."
black = "black ./"
pytest = "pytest"
lintntest = ["black", "pylint", "pytest"]